add: topic list animation

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -1,11 +1,32 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i');
 
+@keyframes fadein {
+  from {
+      opacity:0;
+  }
+  to {
+      opacity:1;
+  }
+}
+
+@keyframes Pop { 
+  0% {
+    opacity: 0;
+    transform: scale(.4);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 html {
   font-family: 'Roboto', sans-serif;
   background-color: white;
 }
 
 h1 {
+  animation: fadein 0.25s;
   font-weight: 300;
   font-size: 3em;
   margin: 0;
@@ -23,7 +44,18 @@ h1 {
 .topic {
   margin: 20px 15px 20px 15px;
   transition: all 0.2s;
+  animation: Pop 0.25s ease-out;
+  animation-fill-mode: both;
 }
+
+.topics .topic:nth-child(1) { animation-delay: .02s }
+.topics .topic:nth-child(2) { animation-delay: .04s }
+.topics .topic:nth-child(3) { animation-delay: .08s }
+.topics .topic:nth-child(4) { animation-delay: .10s }
+.topics .topic:nth-child(5) { animation-delay: .12s }
+.topics .topic:nth-child(6) { animation-delay: .14s }
+.topics .topic:nth-child(7) { animation-delay: .16s }
+
 
 .topic-container {
   display: flex;
