--- a/src/client/app.css
+++ b/src/client/app.css
@@ -174,10 +174,6 @@ h1 {
 
 /* Pages */
 .page {
-  transform: translateX(-100%);
-  transition: all 1s ease;
-}
-
-.page-opened {
-  transform: translateX(0);
+  transition: all 0.25s cubic-bezier(0.22, 0.61, 0.36, 1);
+  position: absolute;
 }
