--- a/src/client/app.css
+++ b/src/client/app.css
@@ -177,3 +177,23 @@ h1 {
   transition: all 0.25s cubic-bezier(0.22, 0.61, 0.36, 1);
   position: absolute;
 }
+
+/* Create Thread */
+.createThread {
+  bottom: 114px;
+  left: 50%;
+  width: 58px;
+  height: 58px;
+  border-radius: 50px;
+  background-color: white;
+  z-index: 2;
+  font-size: 3em;
+  text-align: center;
+  -webkit-transform: none;
+  transform: none;
+  position: fixed;
+  transform: translateX(-50%);
+  box-shadow: 0px 2px 13px 0px #00000012;
+  font-weight: 100;
+  cursor: ;
+}
